v2 : adding jqueryUI for some color shifting and redigned the buttons and made the all button work still there is a bug that make the project dosnt work at launch sometimes and make the buttons not function multiple times sometimes i think its a logic problem

--- a/style.css
+++ b/style.css
@@ -7,13 +7,26 @@ body {
 	font-family: 'Fjalla One', sans-serif;
 	border : 8px white solid;
 	padding-left: 3%;
-	max-width:  800px;
-	margin-left :20%;
-	margin-right :20%;
-	margin-top: 1%
+	margin: 0 auto ;
+	width: 90% ;
+	border-radius : 5px;
 }
 #quoteTeller {
 	font-family: 'Dosis', sans-serif;
 	font-style: italic;
 	 text-indent: 100px;
+}
+button {
+	background-color: #e7e7e7 ;
+    border: none;
+    color: black;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 200%;
+    border-radius: 5px
+}
+#all {
+	margin-left : 100%;
 }
